cart component created, routing to cart changed, removed unused code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-product-list-page></app-product-list-page>
+<!-- <button *ngIf="showButton" [routerLink]="['/cart']" style="background: red;">Go to Cart</button> -->
+<router-outlet></router-outlet>
