--- a/src/app/components/product-list-page/product-list-page.component.html
+++ b/src/app/components/product-list-page/product-list-page.component.html
@@ -1,3 +1,5 @@
+<button [routerLink]="['/cart']" style="background: red;">Go to Cart</button>
+
 <div class="card-container">
     <div *ngFor="let product of productList; index as i">
         <div class="card" id={{product.id}}>
