--- a/src/app/components/product-list-page/product-list-page.component.html
+++ b/src/app/components/product-list-page/product-list-page.component.html
@@ -1,17 +1,20 @@
-<button [routerLink]="['/cart']" style="background: red;">Go to Cart</button>
+<button class="button" [routerLink]="['/cart']">Go to Cart <i class="fas fa-cart-shopping"></i></button>
 
 <div class="card-container">
     <div *ngFor="let product of productList; index as i">
-        <div class="card" id={{product.id}}>
-            <img src={{product.img}}>
-            <p>{{ product.name }}</p>
-            <p>{{ product.price }}</p>
+        <div class="card">
+            <div>
+                <img src={{product.img}}>
+                <p>{{ product.name }}</p>
+                <p>{{ product.price }} €</p>
+            </div>
             <span>
-                <button (click)="decreaseAmount(product)">-</button>
-                <input type="number" [(ngModel)]="product.amountInCart"
-                    (change)="updateInCartAmount(product, $event)" [min]="0" [max]="product.availableAmount + product.amountInCart">
-                <button (click)="increaseAmount(product)">+</button>
-                <button [disabled]="product.amountInCart == 0" (click)="removeFromCart(product)">X</button>
+                <button class="button" (click)="decreaseAmount(product)">-</button>
+                <input type="number" [value]="product.amountInCart" (change)="updateInCartAmount(product, $event)"
+                    [min]="0" [max]="product.availableAmount + product.amountInCart">
+                <button class="button" (click)="increaseAmount(product)">+</button>
+                <button class="trash-button" [disabled]="product.amountInCart == 0" (click)="removeFromCart(product)"><i
+                        class="fas fa-trash"></i></button>
             </span>
         </div>
     </div>
