--- a/src/app/components/product-list-page/product-list-page.component.html
+++ b/src/app/components/product-list-page/product-list-page.component.html
@@ -17,13 +17,11 @@
 
             <span>
                 <button class="button" (click)="decreaseAmount(product)">-</button>
-                <input type="number" [ngModel]="product.amountInCart"
-                       (ngModelChange)="updateInCartAmount(product, $event)"
-                       [min]="0" [max]="product.availableAmount + product.amountInCart">
-                <button class="button"
-                        (mouseenter)="showHoverMessage(product)"
-                        (mouseleave)="hideHoverMessage(product)"
-                        (click)="increaseAmount(product)">+</button>
+                <input type="number" [value]="product.amountInCart"
+                    (keydown.enter)="updateInCartAmount(product, $event)" (blur)="updateInCartAmount(product, $event)"
+                    [min]="0" [max]="product.availableAmount + product.amountInCart">
+                <button class="button" (mouseenter)="showHoverMessage(product)" (mouseleave)="hideHoverMessage(product)"
+                    (click)="increaseAmount(product)">+</button>
                 <button class="trash-button" [disabled]="product.amountInCart === 0" (click)="removeFromCart(product)">
                     <i class="fas fa-trash"></i>
                 </button>
@@ -31,6 +29,9 @@
 
             <p class="hover-message" [class.visible]="hoverMessages[product.uid!]">
                 *The minimum amount to order: {{ product.minOrderAmount }}.
+            </p>
+            <p class="hover-message max-error">
+                *The maximum available amount: {{ product.amountInCart + product.availableAmount }}.
             </p>
         </div>
     </div>
