--- a/src/app/components/product-list-page/product-list-page.component.css
+++ b/src/app/components/product-list-page/product-list-page.component.css
@@ -66,16 +66,15 @@
     margin: 0.5rem 0;
 }
 
-.hover-message {
+.min-order-error {
     font-size: 12px;
-    color: #ff0000;
     text-align: center;
     height: 20px;
     margin-top: 4px;
     visibility: hidden;
 }
 
-.hover-message.visible {
+.min-order-error.visible {
     visibility: visible;
 }
 
@@ -168,4 +167,16 @@ span {
 .trash-button,
 input[type="number"] {
     vertical-align: middle;
+}
+
+.max-error {
+    font-size: 12px;
+    text-align: center;
+    height: 20px;
+    margin-top: 4px;
+    visibility: hidden;
+}
+
+.max-error.visible {
+    visibility: visible;
 }
