--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -201,3 +201,19 @@ input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+.max-error {
+    font-size: 12px;
+    text-align: center;
+    height: 20px;
+    margin-top: 4px;
+    color: #1e6fbf;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0.5rem 0;
+    visibility: hidden;
+}
+
+.max-error.visible {
+    visibility: visible;
+}
