--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -121,7 +121,7 @@ ul li {
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
-    padding: 8px 16px;
+    padding: 6px;
     box-shadow: 0 4px 6px rgba(30, 111, 191, 0.4);
     transition: all 0.2s ease-in-out;
     display: flex;
