--- a/src/app/components/product-list-page/product-list-page.component.css
+++ b/src/app/components/product-list-page/product-list-page.component.css
@@ -92,7 +92,7 @@ input[type=number]::-webkit-inner-spin-button {
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
-    padding: 8px 16px;
+    padding: 6px;
     box-shadow: 0 4px 6px rgba(30, 111, 191, 0.4);
     transition: all 0.2s ease-in-out;
     display: flex;
