--- a/src/app/components/product-list-page/product-list-page.component.html
+++ b/src/app/components/product-list-page/product-list-page.component.html
@@ -16,12 +16,14 @@
             </div>
 
             <span>
-                <button class="button" (click)="decreaseAmount(product)">-</button>
+                <button class="button" (click)="decreaseAmount(product)">
+                    <i class="fa fa-minus"></i></button>
                 <input type="number" [value]="product.amountInCart"
                     (keydown.enter)="updateInCartAmount(product, $event)" (blur)="updateInCartAmount(product, $event)"
                     [min]="0" [max]="product.availableAmount + product.amountInCart">
                 <button class="button" (mouseenter)="tryShowMinOrderMessage(product)" (mouseleave)="hideMinOrderMessage()"
-                    (click)="increaseAmount(product)">+</button>
+                    (click)="increaseAmount(product)">
+                    <i class="fa fa-plus"></i></button>
                 <button class="trash-button" [disabled]="product.amountInCart === 0" (click)="removeFromCart(product)">
                     <i class="fas fa-trash"></i>
                 </button>
